--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 .card {
-  width: 400px;
+  width: 500px;
 }
 
 .block {
@@ -58,7 +58,7 @@ body {
 
 .bigsymbol-img {
   width: 150px;
-  height: 120px;
+  height: 180px;
 }
 
 #search-form {
@@ -76,10 +76,9 @@ body {
   color: #39739d;
   cursor: pointer;
   display: inline-block;
-  font-family: -apple-system, system-ui, "Segoe UI", "Liberation Sans",
-    sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 13px;
-  font-weight: 400;
+  font-weight: 1000;
   line-height: 1.15385;
   margin: 0;
   outline: none;
@@ -134,8 +133,7 @@ input {
   box-sizing: border-box;
   color: #ffffff;
   cursor: pointer;
-  font-family: -apple-system, system-ui, "Segoe UI", "Liberation Sans",
-    sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 13px;
   font-weight: 400;
   line-height: 1.15385;
@@ -189,12 +187,6 @@ a:active {
 }
 
 .byKarmen {
-  font-family: -apple-system, system-ui, "Segoe UI", "Liberation Sans",
-    sans-serif;
+  font-family: "Poppins", sans-serif;
   text-align: center;
-}
-
-.form-control {
-  font-family: -apple-system, system-ui, "Segoe UI", "Liberation Sans",
-    sans-serif;
 }
