--- a/src/styles.css
+++ b/src/styles.css
@@ -9,8 +9,12 @@ body {
   background-repeat: no-repeat;
 }
 
+#city-input {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+}
 .card {
-  width: 500px;
+  width: 400px;
 }
 
 .block {
@@ -59,11 +63,15 @@ body {
 .bigsymbol-img {
   width: 150px;
   height: 180px;
+  padding: 0px;
 }
 
 #search-form {
+  margin: auto;
   border-radius: 3px;
   border: 1px;
+  max-width: 1200px;
+  position: relative;
 }
 
 /* Submit Button */
@@ -76,9 +84,9 @@ body {
   color: #39739d;
   cursor: pointer;
   display: inline-block;
-  font-family: "Poppins", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 13px;
-  font-weight: 1000;
+  font-weight: 300;
   line-height: 1.15385;
   margin: 0;
   outline: none;
@@ -125,47 +133,47 @@ input {
 }
 
 /* Current Button */
-.button-26 {
-  appearance: button;
-  background-color: #0d6efd;
-  border: 1px solid #0d6efd;
-  border-radius: 3px;
+.button-21 {
+  align-items: center;
+  appearance: none;
+  background-color: #98bae7;
+  background-image: linear-gradient(1deg, #4f58fd, #98bae7 99%);
+  background-size: calc(100% + 20px) calc(100% + 20px);
+  border-radius: 100px;
+  border-width: 0;
+  box-shadow: none;
   box-sizing: border-box;
   color: #ffffff;
   cursor: pointer;
+  display: inline-flex;
   font-family: "Poppins", sans-serif;
-  font-size: 13px;
-  font-weight: 400;
-  line-height: 1.15385;
-  margin: 0;
-  overflow: visible;
-  padding: 12px 16px;
+  font-size: 1rem;
+  height: auto;
+  justify-content: center;
+  line-height: 1.5;
+  padding: 6px 20px;
   position: relative;
   text-align: center;
-  text-transform: none;
-  transition: all 80ms ease-in-out;
+  text-decoration: none;
+  transition: background-color 0.2s, background-position 0.2s;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  width: fit-content;
+  vertical-align: top;
+  white-space: nowrap;
 }
 
-.button-26:disabled {
-  opacity: 0.5;
+.button-21:active,
+.button-21:focus {
+  outline: none;
 }
 
-.button-26:focus {
-  outline: 0;
+.button-21:hover {
+  background-position: -20px -20px;
 }
 
-.button-26:hover {
-  background-color: #0a46e4;
-  border-color: #0a46e4;
-}
-
-.button-26:active {
-  background-color: #0039d7;
-  border-color: #0039d7;
+.button-21:focus:not(:active) {
+  box-shadow: rgba(40, 170, 255, 0.25) 0 0 0 0.125em;
 }
 
 .units {
