--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,5 @@
 body {
-  background: rgb(238, 174, 202);
-  background: radial-gradient(
-    circle,
-    rgba(238, 174, 202, 1) 0%,
-    rgba(148, 187, 233, 1) 100%
-  );
+  background: linear-gradient(white, rgb(244, 233, 203), #a4d1da, #94c9ef);
   height: 100%;
   background-repeat: no-repeat;
   font-family: "Poppins", sans-serif;
@@ -15,7 +10,7 @@ body {
   font-weight: 300;
 }
 .card {
-  width: 400px;
+  width: 500px;
 }
 
 .block {
@@ -33,7 +28,7 @@ body {
 }
 
 .block:hover {
-  background-color: #f8edf9;
+  background-color: #f6efd9;
 }
 
 .city-symbol {
@@ -42,8 +37,8 @@ body {
 }
 
 .large-font {
-  font-size: 60px;
-  font-weight: 500;
+  font-size: 55px;
+  font-weight: 800;
 }
 
 .symbol-img {
@@ -52,7 +47,12 @@ body {
 }
 
 .mb-0 {
-  font-size: 35px;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.text-muted {
+  font-size: 18px;
 }
 @media screen and (max-width: 500px) {
   .card {
@@ -61,13 +61,13 @@ body {
 }
 
 .fa-regular {
-  font-size: 70px;
+  font-size: 10px;
 }
 
 .bigsymbol-img {
-  width: 150px;
-  height: 180px;
-  padding: 0px;
+  width: 160px;
+  height: 130px;
+  padding: -10px;
 }
 
 #search-form {
@@ -188,6 +188,17 @@ input {
 .units {
   position: relative;
   top: -24px;
+  color: #a1b9e3;
+}
+
+.celsius-link,
+.fahrenheit-link {
+  color: #4e88ee;
+}
+
+.celsius-link:hover,
+.fahrenheit-link:hover {
+  font-weight: bold;
 }
 
 a:link {
@@ -217,6 +228,14 @@ a:active {
   max-width: 160px;
   margin-top: -40px;
 }
+
+.col {
+  border: thin solid #e4dbf8;
+  border-radius: 20px;
+  margin: 20px;
+  padding: 15px 15px;
+}
+
 .byKarmen {
   font-family: "Poppins", sans-serif;
   text-align: center;
