--- a/src/styles.css
+++ b/src/styles.css
@@ -189,16 +189,10 @@ input {
   box-shadow: rgba(40, 170, 255, 0.25) 0 0 0 0.125em;
 }
 
-.units {
-  position: relative;
-  top: -24px;
-  color: #a1b9e3;
-}
-
 .fahrenheit-link,
 .celsius-link {
   position: absolute;
-  left: 10px;
+  right: 190px;
   text-decoration: none;
   color: rgb(132, 130, 130);
   transition: all 150ms ease-in-out;
@@ -211,11 +205,11 @@ input {
 }
 
 .fahrenheit-link {
-  top: 60px;
+  top: 350px;
 }
 
 .celsius-link {
-  top: 30px;
+  top: 320px;
 }
 .celsius-link:hover,
 .fahrenheit-link:hover {
