--- a/src/styles.css
+++ b/src/styles.css
@@ -205,6 +205,17 @@ input {
   font-weight: bold;
 }
 
+.active-link {
+  font-weight: 600;
+  font-size: 21px;
+  color: black;
+  cursor: default;
+  transition: all 150ms ease-in-out;
+}
+
+.active-link:hover {
+  color: black;
+}
 .current-temp-container {
   left: -15px;
   margin: 0 auto;
@@ -212,12 +223,12 @@ input {
 }
 
 .fahrenheit-link {
-  top: 20px;
+  top: 15px;
   right: -20px;
 }
 
 .celsius-link {
-  top: -5px;
+  top: -10px;
   right: -22px;
 }
 
